syntax = "proto3";

package edu.cdl.iot.protocol;
import "google/protobuf/timestamp.proto";

message SensorData  {
  string project_guid = 1;
  string sensor_id = 2;
  string timestamp = 3;
  map<string, double> doubles = 4;
  map<string, string> strings = 5;
  map<string, int32> integers = 6;
  map<string, string> labels = 7;
  map<string, google.protobuf.Timestamp> timestamps = 8;
  map<string, string> data_sources = 9;
}